; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/mesh/internal_communication/main/extr_mesh_main.c_esp_mesh_comm_p2p_start.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/mesh/internal_communication/main/extr_mesh_main.c_esp_mesh_comm_p2p_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@esp_mesh_comm_p2p_start.is_comm_p2p_started = internal global i32 0, align 4
@esp_mesh_p2p_tx_main = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"MPTX\00", align 1
@esp_mesh_p2p_rx_main = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"MPRX\00", align 1
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_mesh_comm_p2p_start() #0 {
  %1 = load i32, i32* @esp_mesh_comm_p2p_start.is_comm_p2p_started, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %8, label %3

3:                                                ; preds = %0
  store i32 1, i32* @esp_mesh_comm_p2p_start.is_comm_p2p_started, align 4
  %4 = load i32, i32* @esp_mesh_p2p_tx_main, align 4
  %5 = call i32 @xTaskCreate(i32 %4, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 3072, i32* null, i32 5, i32* null)
  %6 = load i32, i32* @esp_mesh_p2p_rx_main, align 4
  %7 = call i32 @xTaskCreate(i32 %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 3072, i32* null, i32 5, i32* null)
  br label %8

8:                                                ; preds = %3, %0
  %9 = load i32, i32* @ESP_OK, align 4
  ret i32 %9
}

declare dso_local i32 @xTaskCreate(i32, i8*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
